--- a/configuration/Areas/Lounge/configuration.yaml
+++ b/configuration/Areas/Lounge/configuration.yaml
@@ -91,18 +91,19 @@ lounge:
       - unique_id: lounge_bright
         name: "Lounge Bright"
         device_class: light
-        attributes:
-          current_illuminance: "{{ (states('sensor.lounge_illuminance') | float(0)) }}"
-          light_state: "{{ states('light.lounge') }}"
-          sun: "{{ states('sun.sun') }}"
         state: |
-          {% if states('sensor.lounge_illuminance') | int(0) > (states('input_number.lounge_illuminance_level') | int(0) * 1.3) and is_state('light.lounge', 'off') %}
+          {% set lux = states('sensor.lounge_illuminance') %}
+          {% set threshold = states('input_number.lounge_illuminance_level') %}
+          {% set selfState = states('binary_sensor.lounge_bright') %}
+          {% set lightState = states('light.lounge') %}
+          {% set selfLastChanged = states.binary_sensor.lounge_bright.last_changed %}
+          {% if lux | int(0) > (threshold | int(0) * 1.3) and lightState == 'off' %}
             True
-          {% elif states('sensor.lounge_illuminance') | int(0) > (states('input_number.lounge_illuminance_level') | int(0) * 3) %}
+          {% elif lux | int(0) > (threshold | int(0) * 3) %}
             True
-          {% elif ((states('input_number.lounge_illuminance_level') | int(0) < states('sensor.lounge_illuminance') | int(0) < (states('input_number.lounge_illuminance_level') | int(0) * 1.3 ))) and (as_timestamp(now())-as_timestamp(states.binary_sensor.lounge_bright.last_changed) < 300) %}
-            {{ states('binary_sensor.lounge_bright') }}
-          {% elif states('sensor.lounge_illuminance') | int(0) < states('input_number.lounge_illuminance_level') | int(0) %}
+          {% elif ((threshold | int(0) < lux | int(0) < (threshold | int(0) * 1.3 ))) and (as_timestamp(now())-as_timestamp(selfLastChanged) < 300) %}
+            {{ selfState }}
+          {% elif lux | int(0) < threshold | int(0) %}
             False
           {% else %}
             False
